@@ -1,6 +1,7 @@
 2004-11-09  Vincent Noel  <vnoel@cox.net>
 
 	* logview.c (logview_copy): Handle multiple lines selection.
+	(logview_select_all): New. Add a "Select All" menu item.
 
 	* log_repaint.c (handle_selection_changed_cb): Allow the selection
 	of multiple log lines.
